# fastapi_boilerplate

./: README.md
src/: pyproject.toml
src/core/: db.py
src/migrations/: env.py
src/migrations/versions/: 4115e23a03b8_init.py
src/models/: __init__.py  sample.py
