[tool.poetry]
name = "base_backend_template"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <my@rdmingazov.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.2"
uvicorn = "^0.18.2"
asyncpg = "^0.26.0"
greenlet = "^1.1.2"
alembic = "^1.8.1"
sqlalchemy = "^2.0.30"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
